# ai-interview-tag-pool

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
src/ai_interview_tag_pool/: __init__.py  config.py  main.py  tagging_config.py
src/ai_interview_tag_pool/services/: __init__.py  base_service.py  storage_service.py  subtitle_service.py  tagging_service.py
