[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interview-tag-pool"
version = "0.1.0"
description = "AI interview subtitle tagging system"
authors = [{name = "CHE-YI-YUAN", email = "your@email.com"}]
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2025.04.29",
    "youtube-transcript-api>=0.6.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
